feat: agregue que el admin vea los usuarios, show-users.component

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -31,4 +31,10 @@
     <div class="box-offers">
         <button class="button" (click)="navegar('ofertas')">Offers</button>
     </div>
+
+    <div *ngIf = "isAdmin">
+        <div class="box-users">
+            <button class="button" (click)="navegar('showUsers')">Users</button>
+        </div>
+    </div>
 </section>
