feat: agregue que el admin pueda ver la biblioteca de cada usuario, show-users.component, app-routing.module, biblioteca.component

--- a/Films/src/app/components/show-users/show-users.component.html
+++ b/Films/src/app/components/show-users/show-users.component.html
@@ -1,6 +1,6 @@
 <div *ngFor = "let user of users">
     <div>{{user.firstName}} {{user.lastName}}
-        <button> Ver Biblioteca </button>
+        <button (click)="verBiblioteca(user.id)"> Ver Biblioteca </button>
         <button> Ver Pagos Pendientes </button>
     </div>
 </div>
