(feat): agregue el diseño y listado de las peliculas al buscar. (style): modifique el estilo del boton de agregar al carrito donde muestra el precio con animacion ahora.

--- a/Films/src/app/components/biblioteca/biblioteca.component.html
+++ b/Films/src/app/components/biblioteca/biblioteca.component.html
@@ -1,3 +1,4 @@
+<app-alternative-options></app-alternative-options>
 <section *ngIf="movieLibrary.length > 0" class="box">
   <div class="box-title">
     <h4 class="title">MI BIBLIOTECA</h4>
