--- a/Films/src/app/components/film-detail/film-detail.component.css
+++ b/Films/src/app/components/film-detail/film-detail.component.css
@@ -3,6 +3,34 @@ img {
     height: 430px;
 }
 
+.box-carrito{
+    display: flex;
+    justify-content: center;
+}
+
+
+.carrito-logo{
+    height: 45px;
+    width: 45px;
+}
+
+.btn-carrito{
+    padding: 0.2rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    padding-inline: 0.4rem;
+    font-size: 1rem;
+    padding-block: 0.4rem;
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease, box-shadow 0.6s ease;
+    cursor: pointer;
+    color: white;
+}
+
+.btn-carrito:hover{
+    box-shadow: black 1px 2px;
+}
+
 .button{
     margin-right: 1rem;
     padding-inline: 0.4rem;
