--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -66,6 +66,7 @@ img{
     grid-area: box-main-menu;
     display: flex;
     justify-content: center;
+    transition: 1s;
 }
 
 .img-main-menu{
@@ -141,11 +142,11 @@ img{
     justify-content: center;
     cursor: pointer;
     outline: none; 
-    transition: none;
+    transition: 0.5s;
 }
 
 .button-main-menu:hover{
-    box-shadow: 1px 1px 2px 2px rgb(11, 11, 11);
+    box-shadow: 1px 1px 2px 3px rgb(11, 11, 11);
     background-color: transparent; 
 }
 
@@ -218,6 +219,78 @@ img{
 .button-sign-up:hover{
     border-radius: 1rem;
     background-color: rgb(160, 160, 160);
+}
+
+.box-result-search {
+    position: absolute;
+    top: 14%; /* Debajo de la barra de búsqueda */
+    width: 50rem;
+    transform: translateX(50%);
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 300px;
+    overflow-y: auto;
+    z-index: 10;
+}
+  
+.result-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 0%;
+    padding: 10px;
+    border: none;
+    background: none;
+    text-align: left;
+    cursor: pointer;
+    border-bottom: 1px solid #e0e0e0;
+    transition: background-color 0.3s ease; 
+}
+
+.result-item:hover {
+    background-color: #f0f0f0; /* Fondo ligeramente gris */
+}
+
+.no-result{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 0%;
+    padding: 10px;
+    border: none;
+    background: none;
+    text-align: center;
+    margin-block:1rem;
+}
+
+.result-item:last-child {
+    border-bottom: none;
+}
+  
+.result-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
+    object-fit:cover;
+    margin-right: 15px;
+}
+  
+.result-info {
+    display: flex;
+    flex-direction: column;
+}
+  
+.result-title {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    color: #333;
+}
+  
+.result-rating {
+    font-size: 14px;
+    color: #777;
 }
 
 
