--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
@@ -20,6 +20,7 @@
           <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
           <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
             <img class="carrito-logo" src="/assets/carrito.png" alt="">
+            <span class="precio">$ {{ film.precio }}</span>
           </button>
         </div>
       </div>
