feature: agregado de pagos en efectivo - admin gestiona de manera correcta y comoda los pagos en efectivo

--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -284,6 +284,10 @@
     margin-bottom: 1rem;
 }
 
+.margen-extra {
+    margin-left: 20px;
+  }
+
 .card-is-empty{
     display: block;
     margin-block: 4rem;
