--- a/Films/src/app/components/show-users/show-users.component.html
+++ b/Films/src/app/components/show-users/show-users.component.html
@@ -1,6 +1,6 @@
 <div *ngFor = "let user of users">
     <div>{{user.firstName}} {{user.lastName}}
         <button (click)="verBiblioteca(user.id)"> Ver Biblioteca </button>
-        <button> Ver Pagos Pendientes </button>
+        <button (click)="verPagosPendientes(user.id)"> Ver Pagos Pendientes </button>
     </div>
 </div>
