--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,17 @@
     </div>
 
     <div class="box-extras">
-        <div *ngIf="isLoggedIn && !isAdmin" class="box-shopping-cart"> <!-- Solo mostrar carrito si es usuario -->
-          <button class="button-shopping-cart" (click)="navegarCarrito()">
-            <img class="img-shopping-cart" src="/assets/Shopping cart.png" alt="">    
-          </button>
+        <div *ngIf="isLoggedIn"> <!-- Solo mostrar carrito si es usuario -->
+          <div *ngIf = "!isAdmin">
+            <div class="box-shopping-cart">
+              <button class="button-shopping-cart" (click)="navegarCarrito()">
+                <img class="img-shopping-cart" src="/assets/Shopping cart.png" alt="">    
+              </button>
+            </div>
+          </div>
         </div>
         
-        <div *ngIf="isLoggedIn && (isLoggedIn && !isAdmin) || (isAdmin && getadminCodeVerified())" class="box-profile"> <!-- Verifica si el código del admin fue verificado -->
+        <div *ngIf="isLoggedIn" class="box-profile">
           <button class="button-profile" (click)="navegarPerfil()">
             <img class="img-profile" src="/assets/person.png" alt="">             
           </button>
