--- a/Films/src/app/components/film-detail/film-detail.component.html
+++ b/Films/src/app/components/film-detail/film-detail.component.html
@@ -12,11 +12,15 @@
         <img class="star" src="/assets/star.png" alt="">
       </div>
       <h3 class="data"> $ {{movie.precio}} </h3>
-      <div class="box-carrito">
-        <button class="btn-carrito" (click)="agregarPeliculaAlCarrito(movie)">
-          <img class="carrito-logo" src="/assets/carrito.png" alt="">
-        </button>
+
+      <div *ngIf="isLoggedIn && !isAdmin">
+        <div class="box-carrito">
+          <button class="btn-carrito" (click)="agregarPeliculaAlCarrito(movie)">
+            <img class="carrito-logo" src="/assets/carrito.png" alt="">
+          </button>
+        </div>
       </div>
+
     </div>
   </div>
 
@@ -45,19 +49,30 @@
             </div>
           </div>
         </div>
+        
+        
+          <ng-template #noReviews>
+            <div *ngIf = "isLoggedIn && !isAdmin">
+              <p>No hay reseñas aún. ¡Sé el primero en escribir una!</p>
+            </div>
+          </ng-template>
 
-        <ng-template #noReviews>
-          <p>No hay reseñas aún. ¡Sé el primero en escribir una!</p>
-        </ng-template>
-
+          <div *ngIf = "isLoggedIn && isAdmin">
+            <p>Los administradores no pueden publicar reseñas</p>
+          </div>
+          <div *ngIf = "!isLoggedIn">
+            <p>Inicie sesión para publicar una reseña</p>
+          </div>
+        
         <div *ngIf="reviewToDelete" class="alert alert-danger" role="alert">
           ¿Estás seguro que deseas eliminar esta reseña?
           <button class="btn btn-danger ms-2" (click)="deleteReview()">Sí</button>
           <button class="btn btn-secondary ms-2" (click)="cancelDelete()">Cancelar</button>
         </div>
         
-        <!-- Formulario para agregar o editar una reseña -->
-        <form (ngSubmit)="addReview()" class="mt-4">
+        <div *ngIf = "isLoggedIn && !isAdmin">
+          <!-- Formulario para agregar o editar una reseña -->
+          <form (ngSubmit)="addReview()" class="mt-4">
             <div class="form-group">
                 <textarea class="form-control" [(ngModel)]="newReview" name="review" placeholder="Escribe tu reseña aquí" rows="2" required></textarea>
             </div>
@@ -70,7 +85,8 @@
                 <button type="button" class="button" (click)="confirmEditReview()">Confirmar</button>
                 <button type="button" class="button" (click)="cancelEdit()">Cancelar</button>
             </div>
-        </form>
+          </form>
+        </div>
         
         <p *ngIf="errorResena" class="text-danger">{{ errorResena }}</p>
 
@@ -79,4 +95,3 @@
 
 </div>
 
-<!-- Confirmación de eliminación -->
