--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -17,10 +17,13 @@
 
           <div class="box-options">
             <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
-            <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
-              <img class="carrito-logo" src="/assets/carrito.png" alt="">
-              <span class="precio">$ {{ film.precio }}</span>
-            </button>
+            
+            <div *ngIf = "isLoggedIn && !isAdmin">
+              <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
+                <img class="carrito-logo" src="/assets/carrito.png" alt="">
+                <span class="precio">$ {{ film.precio }}</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
