--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -29,6 +29,7 @@
     background: linear-gradient(135deg, #d1cdbb, #b2ae94);
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 0.2rem;
 }
 
 .tarjeta {
@@ -84,6 +85,19 @@
 .tipo-tarjeta{
     text-align: right;
     width: max-content;
+}
+
+
+.visa-logo{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+}
+
+.mastercard-logo{
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
 }
 
 .box-options{
