fix: arregle que aparezca la opcion de pagar en efectivo en caso de no tener una tarjeta agregada

--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -298,12 +298,13 @@
     margin-bottom: 1rem;
 }
 
-.margen-extra {
-    margin-left: 20px;
-  }
 
 .card-is-empty{
     display: block;
     margin-block: 4rem;
     justify-content: center;
+}
+
+.cash{
+    margin-block: 2rem;
 }
