--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -35,8 +35,14 @@
 
 <div *ngIf="!showBuyWithActualCard">
   <div class="card-is-empty">
-    <h4 class="guide">Necesita una tarjeta para continuar la operacion</h4>
-    <button id="newCard" class="button" (click)="showFormToAddNewCard()">Agregar una tarjeta</button>
+    <div>
+      <h4 class="guide">Necesita una tarjeta para continuar la operacion</h4>
+      <button class="button" (click)="showFormToAddNewCard()">Agregar una tarjeta</button>
+    </div>
+    <div class="cash">
+      <h4 class="guide">Tambien puede continuar abonando en efectivo</h4>
+      <button class="button margen-extra" (click)="pagarEnEfectivo()">Pagar en efectivo</button>
+    </div>
   </div>
 </div>
 
